--- a/index.css
+++ b/index.css
@@ -5,3 +5,57 @@ body
     overflow: hidden;
     background-color: black;
 }
+
+.hidden
+{
+    display: none !important;
+}
+
+.scores-text
+{
+    color: white; 
+    font-family: sans-serif; 
+    font-size: 14px; 
+    margin-bottom: 6px;
+}
+
+.ui-element
+{
+    position: absolute;
+    display: grid;
+    width: 40%;
+    height: 40vh;
+    left: 20%;
+    border: 5px solid blue;
+    border-radius: 7px;
+    color: white;
+    top: 20vh;
+    text-align: center;
+    background-color: black;
+    padding: 10px;
+    justify-items: center;
+    align-content: space-around;
+}
+
+#startGameBtn
+{
+    width: 220px;
+    height: 60px;
+    border: 5px solid blue;
+    border-radius: 7px;
+    background-color: black;
+    color: white;
+    font-size: 1.2em;
+}
+
+#gameOverContainer
+{
+    color: red;
+}
+
+#startGameBtn:hover
+{
+    cursor: pointer;
+    background-color: blue;
+    transition: 0.5s ease;
+}
